Map: fix the source popup panning when there are example images.
While we're at it, lower the image count to 5 so that it fits on one row without making the popup too big, and get rid of the image-filename tooltips because that's pointless here.

--- a/project/map/static/css/map.css
+++ b/project/map/static/css/map.css
@@ -57,6 +57,17 @@
 }
 
 
-img.source-example-image {
-    padding: 0 3px;  /* top/bottom left/right */
+.example-images-line {
+    display: flex;
+}
+.example-image-container {
+    /*
+    Leaflet may compute the detail-box popup size before the example images
+    are loaded. But by defining width and height of each example image's
+    container, Leaflet can compute the popup size correctly even when
+    that happens.
+    */
+    width: 100px;
+    height: 100px;
+    padding: 0 3px;
 }
